[gd_scene load_steps=5 format=3 uid="uid://f34dinc60kaa"]

[ext_resource type="Script" uid="uid://dtjahob531d8j" path="res://ui/top_bar_ui/relics/relic_ui.gd" id="1_ye6dh"]
[ext_resource type="Texture2D" uid="uid://ddc3y4ouv4tm6" path="res://assets/sprites/relics/paganinis_bow.png" id="2_vhbgb"]
[ext_resource type="PackedScene" uid="uid://bk0mu0fxl3rmm" path="res://ui/top_bar_ui/relics/relic_description_hover.tscn" id="3_iv7bk"]

[sub_resource type="LabelSettings" id="LabelSettings_ye6dh"]
font_size = 24
outline_size = 2
outline_color = Color(0.0142752165, 0.014275218, 0.014275218, 1)

[node name="RelicUI" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ye6dh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="texture" type="TextureRect" parent="VBoxContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_vhbgb")
expand_mode = 3

[node name="amount" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_ye6dh")

[node name="TopBarRelicDescription" parent="VBoxContainer" instance=ExtResource("3_iv7bk")]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainer" to="." method="_on_margin_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/MarginContainer" to="." method="_on_margin_container_mouse_exited"]
